Closed Bug 1791372 Opened 3 years ago Closed 3 years ago

Crash in [@ OOM | large | NS_ABORT_OOM | nsTSubstring<T>::Append | mozilla::net::ProxyAutoConfig::ConfigurePAC]

Categories

(Core :: Networking, defect, P2)

x86
Windows 10
defect

Tracking

()

RESOLVED FIXED
107 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox105 --- wontfix
firefox106 --- wontfix
firefox107 --- fixed

People

(Reporter: valentin, Assigned: valentin)

References

(Blocks 1 open bug)

Details

(Keywords: crash, Whiteboard: [necko-triaged])

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/a0bfb1ff-d8e8-4061-bfb4-b22e80220608

MOZ_CRASH Reason: MOZ_CRASH(OOM)

Top 10 frames of crashing thread:

0 xul.dll NS_ABORT_OOM xpcom/base/nsDebugImpl.cpp:616
1 xul.dll nsTSubstring<char>::Append xpcom/string/nsTSubstring.cpp:820
2 xul.dll mozilla::net::ProxyAutoConfig::ConfigurePAC netwerk/base/ProxyAutoConfig.cpp:507
3 xul.dll mozilla::net::ExecutePACThreadAction::Run netwerk/base/nsPACMan.cpp:275
4 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:465
5 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:330
6 xul.dll MessageLoop::RunHandler ipc/chromium/src/base/message_loop.cc:373
7 xul.dll MessageLoop::Run ipc/chromium/src/base/message_loop.cc:355
8 xul.dll static nsThread::ThreadFunc xpcom/threads/nsThread.cpp:378
9 nss3.dll _PR_NativeRunThread nsprpub/pr/src/threads/combined/pruthr.c:399
Crash Signature: [@ OOM | large | NS_ABORT_OOM | nsTSubstring<T>::Append | mozilla::net::ProxyAutoConfig::ConfigurePAC] → [@ OOM | large | NS_ABORT_OOM | nsTSubstring<T>::Append | mozilla::net::ProxyAutoConfig::ConfigurePAC] [@ OOM | large | NS_ABORT_OOM | mozilla::net::ProxyAutoConfig::ConfigurePAC]
Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/e718b3679158 Use fallible append in mozilla::net::ProxyAutoConfig::ConfigurePAC r=necko-reviewers,kershaw
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 107 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: