Bug 1791372 - Use fallible append in mozilla::net::ProxyAutoConfig::ConfigurePAC r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D157636